# coreason-budget

./: AGENTS.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml
coreason-budget/: pyproject.toml  verify_usage.py
coreason-budget/src/coreason_budget/: __init__.py  config.py  exceptions.py  ledger.py  manager.py  pricing.py
coreason-budget/tests/: test_budget.py
docs/: index.md  requirements.md  usage.md
src/coreason_budget/: __init__.py  config.py  guard.py  ledger.py  main.py  manager.py  pricing.py  server.py
src/coreason_budget/utils/: logger.py
tests/: conftest.py  test_additional_edge_cases.py  test_advanced_scenarios.py  test_audit_edge_cases.py  test_complex_cases.py  test_complex_scenarios.py  test_config.py  test_edge_cases_extended.py  test_extra_edge_cases.py  test_features.py  test_final_edge_cases.py  test_final_verification.py  test_guard.py  test_input_validation.py  test_intended_usage.py  test_ledger.py  test_logger.py  test_logger_init.py  test_logging_format.py  test_main.py  test_manager.py  test_more_complex_cases.py  test_new_complex_cases.py  test_pricing.py  test_refunds.py  test_server.py  test_server_extra.py  test_sync_complex_cases.py  test_sync_manager.py  test_ultra_complex_scenarios.py  test_utils.py  test_validation.py
